--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bgcolor">
+    android:background="?attr/backgroundColor">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,7 +32,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/lighterbgcolor"
+                    android:background="?attr/customCardBackground"
                     android:gravity="center"
                     android:orientation="vertical"
                     android:paddingVertical="8dp">
@@ -49,7 +49,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:text="SCORE"
-                            android:textColor="@android:color/white"
+                            android:textColor="?attr/textColor"
                             android:textSize="@dimen/score_title_text_size" />
 
                         <ImageButton
@@ -68,7 +68,7 @@
                         android:gravity="center"
                         android:includeFontPadding="false"
                         android:text="0"
-                        android:textColor="@android:color/white"
+                        android:textColor="?attr/textColor"
                         android:textSize="@dimen/score_text_size"
                         android:textStyle="bold" />
 
@@ -78,7 +78,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:text="Hold Count: 0"
-                        android:textColor="@android:color/white"
+                        android:textColor="?attr/textColor"
                         android:textSize="@dimen/hold_count_text_size"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -102,7 +102,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/rounded_button_blue"
                     android:text="CLIMB"
-                    android:textColor="@android:color/black"
+                    android:textColor="?attr/textColor"
                     android:textSize="@dimen/button_text_size"
                     android:textStyle="bold" />
 
@@ -114,7 +114,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/rounded_button_red"
                     android:text="FALL"
-                    android:textColor="@android:color/black"
+                    android:textColor="?attr/textColor"
                     android:textSize="@dimen/button_text_size"
                     android:textStyle="bold" />
 
@@ -126,7 +126,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/rounded_button_gray"
                     android:text="RESET"
-                    android:textColor="@android:color/black"
+                    android:textColor="?attr/textColor"
                     android:textSize="@dimen/reset_button_text_size"
                     android:textStyle="bold" />
             </LinearLayout>
